# EventSleuth

./: .gitignore  Cargo.toml  EventSleuth-Specification.md  PROGRESS.md  PROJECT-ATLAS.md  README.md  TEST_README.md  build.rs  index.html  package-lock.json  package.json  run-all-tests.ps1  run-all-tests.sh  setup-tests.ps1  tailwind.config.js  update-application.ps1  vitest.config.ts
.github/workflows/: ci.yml  release.yml
assets/: app.manifest
coverage/: App.tsx.html  coverage-final.json  index.html  styles.css.html
installer/: eventsleuth.nsi
src/: App.tsx  app.rs  app_actions.rs  app_update.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tests.rs
src/__tests__/: App.test.tsx  EventList.test.tsx  Integration.test.tsx  SearchForm.test.tsx
src/core/: channel_enumerator.rs  event_format.rs  event_reader.rs  event_record.rs  filter.rs  filter_preset.rs  filter_tests.rs  mod.rs  xml_parser.rs
src/export/: csv_export.rs  json_export.rs  mod.rs
src/test-utils/: setup.ts
src/ui/: detail_panel.rs  event_table.rs  filter_panel.rs  mod.rs  stats_panel.rs  status_bar.rs  theme.rs  toolbar.rs
src/util/: constants.rs  error.rs  mod.rs  time.rs
tests/: constants_validation.rs  error_types.rs  export_validation.rs  filter_roundtrip.rs  integration.rs  time_utils.rs
