[package]
name = "eventsleuth"
version = "0.1.0"
edition = "2021"
description = "A fast, filterable Windows Event Log viewer"
authors = ["EventSleuth"]

[dependencies]
eframe = { version = "0.31", default-features = true }
egui = "0.31"
egui_extras = { version = "0.31", features = ["datepicker"] }
windows = { version = "0.58", features = [
    "Win32_System_EventLog",
    "Win32_Foundation",
    "Win32_Security",
] }
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
crossbeam-channel = "0.5"
thiserror = "2"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"

[build-dependencies]
winresource = "0.1"
image = "0.25"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
