[package]
name = "EventSleuth"
version = "1.0.0"
description = "Advanced Windows Event Log Analyzer"
authors = ["Swatto"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eventsleuth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.52.0", features = [
    "Win32_System_EventLog",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Registry"
] }
chrono = "0.4"
regex = "1.10"
is_elevated = "0.1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units to improve optimization
panic = "abort"  # Use abort for panics to reduce binary size
strip = true     # Strip symbols from binary
overflow-checks = false # Disable integer overflow checks
